# ai-dev-tools

./: .gitignore  README.md  Taskfile.yml  extract-audio  pyproject.toml
.github/workflows/: ci.yml
src/ai_dev_tools/: __init__.py
src/ai_dev_tools/cli/: __init__.py  ai_execution_types.py  code_generation.py  get_transcript.py
src/ai_dev_tools/code_generation/: dsl_builtins.py  dsl_emitter.py  dsl_executor.py  dsl_parser.py  dsl_schema.py
tests/: test_dsl.py  test_dsl_emitter.py  test_dsl_unit_coverage.py
